<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarksheetORS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="opLogin">Login</string>
    <string name="title_activity_user_reg">UserRegActivity</string>
    <string name="name">Name</string>
    <string name="opSave">Save</string>
    <string name="reg">Registration</string>
    <string name="title_activity_marksheet">MarksheetActivity</string>
    <string name="title_activity_marksheet_list">MarksheetListActivity</string>

</resources>
