<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/common_list"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/completed"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/username"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/password"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <Button
                android:id="@+id/loginLogBut"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="80dp"
                android:background="@drawable/completed"
                android:text="@string/opLogin" />

            <Button
                android:id="@+id/opReg"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/completed"
                android:text="@string/reg" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>